--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script src="activeup.js"></script>
+<script src="pg.js"></script>
 <meta property="og:url" content="">
 <meta property="og:title" content="2025 STAFF RECRUITMENT" />
 <meta property="og:description" content="Apply now and join the team">
